# jiuwen-deepsearch

./: .env.example  .gitignore  README.en.md  README.md  main.py  pyproject.toml  service.yaml.example  start_server.py
docs/: FAQ.md  release_notes.md
examples/: 全球TOP5光伏企业在东南亚的产能布局及美国IRA法案影响分析.md  医学影像AI辅助诊断系统临床落地瓶颈分析.md
src/adapter/df/: __init__.py  adapter.py
src/config/: configuration.py  tools.py
src/llm/: __init__.py  deepseek_creator.py  llm_wrapper.py  openai_creator.py
src/manager/: nodes.py  search_context.py  workflow.py
src/programmer/: __init__.py  programmer.py
src/prompts/: __init__.py  chat.md  collector.md  entry.md  planner.md  programmer.md  report_markdown.md  report_ppt.md  template.py
src/query_understanding/: planner.py  router.py
src/report/: __init__.py  config.py  report.py  report_processor.py
src/retrieval/: base_retriever.py  collector.py  local_search.py  retrieval_tool.py
src/retrieval/graph_retriever/: README.md  requirements.txt
src/retrieval/graph_retriever/grag/embed_models/: __init__.py  base.py  sbert.py
src/retrieval/graph_retriever/grag/index/: __init__.py  es.py
src/retrieval/graph_retriever/grag/pipeline/: extract_triples.py  index.py  (+2 more)
src/retrieval/ragflow/: ragflow.py
src/server/: __init__.py  app.py  research_message.py  routes.py  server.py
src/tools/: __init__.py  crawl.py  python_programmer.py  tool_log.py  web_search.py
src/tools/crawler/: __init__.py  html_parser_crawler.py  jina_crawler.py
src/utils/: llm_utils.py
tests/llm/: test_llm.py
tests/programmer/: test_programmer.py
(+14 files in other folders)
