[project]
name = "jiuwen-deepsearch"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    'bs4',
    'dotenv',
    'fastapi',
    'jinja2',
    'json_repair',
    'langchain_community',
    'langchain_deepseek',
    'langchain_experimental',
    'langchain_openai',
    'langgraph',
    'shortuuid',
    'uvicorn',
]