[project]
name = "jiuwen-deepsearch"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    'bs4>=0.0.2',
    'dotenv>=0.0.9',
    'fastapi>=0.116.1',
    'jinja2>=3.1.6',
    'json_repair>=0.47.8',
    'langchain_community>=0.3.27',
    'langchain_deepseek>=0.1.4',
    'langchain_experimental>=0.3.4',
    'langchain_openai>=0.3.28',
    'langgraph>=0.5.4',
    'lxml>=6.0.0',
    'shortuuid>=1.0.13',
    'uvicorn>=0.35.0',
]